tests/paczka1/small_fuzzy/60383721.err
Error in line 3: NlbxoUnE3 S138 21,5
Error in line 6: Tkgnu7ILmw A984 96,6
